2002-11-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03495] local CGI can't work
	* local.c: #include "hash.h"
		(set_environ): env string put in hash

2002-11-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03494] Number of line is few when pager mode.
	* display.c (redrawLine): buf->rootY

2002-11-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03493] scroll menu
	* menu.c (mLineU): added
		(mLineD): added
		(MenuKeymap): C-r, C-s, J, K
		(mouse_scroll_line): added
		(process_mMouse): drag
			BTN4, BTN5
	* doc-jp/README.menu: update

2002-11-27  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: w3m/0.3.2.1+cvs

2002-11-27  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03491] Re: case insensitive regexp search
	* regex.c (matchWhich): tolower

2002-11-27  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* use local_cookie for support local-cgi commands
	* file.c (loadGeneralFile): pass Local_cookie to DirBufferCommand
	* fm.h (Local_cookie): Str
	* local.c (setLocalCookie): Str, set_environ()
		(set_cgi_environ): remove LOCAL_COOKIE
	* main.c (ldhelp): pass Local_cookie
		(adBmark): ditto
	* rc.c (optionpanel_src1): cookie
		(load_option_panel): pass Local_cookie
	* w3mbookmark.c (main): check Local_cookie
	* w3mhelperpanel (main): ditto
	* scripts/dirlist.cgi.in: ditto
	* scripts/w3mhelp.cgi.in: ditto
	* scripts/multipart/multipart.cgi.in: ditto

2002-11-27  Fumitoshi UKAI  <ukai@debian.or.jp>

	* frame.c (createFrameFile): html_quote()

2002-11-27  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03488] meta refresh in frame
	* file.c (getMetaRefreshParam): added
		(HTMLtagproc1): use getMetaRefreshParam()
	* frame.c (createFrameFile): check meta refresh
	* proto.h (getMetaRefreshProgram): added

2002-11-27  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* w3m 0.3.2.1 security fix
	* frame.c (createFrameFile): html_quote()

2002-11-27  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
