@@ -1,5 +1,13 @@
 2002-11-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03496] parse <!-- ... --> in <script>
+	* etc.c (read_token): check <pre>
+	* file.c (HTMLlineproc0): remove comment processing
+			check pre mode
+			comment processing move
+
+2002-11-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03495] local CGI can't work
 	* local.c: #include "hash.h"
 		(set_environ): env string put in hash
@@ -5226,4 +5234,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.568 2002/11/27 16:35:18 ukai Exp $
+$Id: ChangeLog,v 1.569 2002/11/27 16:39:13 ukai Exp $
